"Updated image src paths in ContainerCards.astro from relative to absolute"

--- a/src/components/saweria/ContainerCards.astro
+++ b/src/components/saweria/ContainerCards.astro
@@ -1,8 +1,8 @@
 <section class="container-cards">
   <div class="category_container">
     <div class="content">
-      <img src="./cardsEffect/card_cover_1_1.jpg" class="professio_image" alt="Profession" />
-      <img src="./cardsEffect/card_cover_1_2.jpg" class="profile_image" alt="Profile" />
+      <img src="/cardsEffect/card_cover_1_1.jpg" class="professio_image" alt="Profession" />
+      <img src="/cardsEffect/card_cover_1_2.jpg" class="profile_image" alt="Profile" />
       <div class="profile_detail">
         <span>เติบโต</span>
         <p>คำเทศนาเติบโตชีวิต</p>
@@ -15,8 +15,8 @@
       </div>
     </div>
     <div class="content">
-      <img src="./cardsEffect/card_cover_2_1.jpg" class="profession_image" alt="Profession" />
-      <img src="./cardsEffect/card_cover_2_2.jpg" class="profile_image" alt="Profile" />
+      <img src="/cardsEffect/card_cover_2_1.jpg" class="profession_image" alt="Profession" />
+      <img src="/cardsEffect/card_cover_2_2.jpg" class="profile_image" alt="Profile" />
       <div class="profile_detail">
         <span>รับประทานอาหาร</span>
         <p>เติบโตฝ่ายร่างกาย</p>
@@ -28,8 +28,8 @@
       </div>
     </div>
     <div class="content">
-      <img src="./cardsEffect/card_cover_3_2.jpg" class="professio_image" alt="Profession" />
-      <img src="./cardsEffect/card_cover_3_1.jpg" class="profile_image" alt="Profile" />
+      <img src="/cardsEffect/card_cover_3_2.jpg" class="professio_image" alt="Profession" />
+      <img src="/cardsEffect/card_cover_3_1.jpg" class="profile_image" alt="Profile" />
       <div class="profile_detail">
         <span>บอร์ดเกม</span>
         <p>เวลาแห่งความสนุก</p>
