"Update BaseHeadSeedBKK and index page with new metadata and image"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,14 @@ const msg = `เราคือชุมชนคริสเตียน คร
 
 const msg2 = `เราฟังเทศและ worship  เรารับประทานอารหารด้วยกัน เราใช้เวลากับพระเจ้าและสร้างความสัมพันธ์ที่ดีกับพี่น้องในโบส หลังเลิกโบสเราจะเล่น Board Game กัน`
 const msg3 = `เราเป็นโบสเล็กๆที่เพิ่งตั้งในองค์กรคริสตจักรเมล็ดพันธุ์ที่สังกัดสหกิจคริสเตียน  มีสมาชิกที่เป็นกลุ่มนักศึกษาและกลุ่มคนวัยทำงาน เราเน้นความเป็นสมัยใหม่เพื่อรองรับกลุ่มคนรุ่นใหม่`
+
+
 ---
 
 <Layout
-  title="ＳＥＥＤＢＫＫ"
-  description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น"
-  pubDate={new Date('Septerber 09 2023')}
+  title="คริสตจักรเมล็ดพันธุ์กรุงเทพ | SEEDBKK"
+  description="สถานที่ที่คุณสามารถพบกับเพื่อนใหม่ สร้างความสัมพันธ์ที่ยั่งยืน และค้นหาความหมายในชีวิต ร่วมกันกับเพื่อนๆวัยรุ่นที่มีความเชื่อและเป้าหมายเดียวกัน เรามีกิจกรรมสนุกสนาน การนมัสการที่สดใส และการสนับสนุนจากทีมงานที่มีประสบการณ์ มาร่วมเดินทางในเส้นทางแห่งความเชื่อและความรักกับเราในโบสวัยรุ่น"
+  pubDate={new Date('July 09 2024')}
 >
   <Navbar />
   <Header />
