--- a/src/components/BaseHeadSeedBKK.astro
+++ b/src/components/BaseHeadSeedBKK.astro
@@ -21,7 +21,7 @@ const { title, description, image = '/cardsEffect/card_cover_3_2.jpg' } = Astro.
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href={image} />
+<link rel="icon" type="image/svg+xml" href="/SEED_CHURCH_LOGO_3.png" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
