--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -51,9 +51,9 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
               <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/qrcode">QrCode</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href={ourChruch}>Our Chuch</a>
-              </li>
+              </li> -->
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle fw-bold fs-4 title-futuraHandwritten"
@@ -70,12 +70,12 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                     <a class="dropdown-item" href="https://www.youtube.com/@seedchurchthailand2297"
                       >มานาจารย์ใหญ่และYoutube</a>
                   </li>
-                  <li><a class="dropdown-item" href="https://www.youtube.com/@SEEDCHURCHTHAILAND">คำพยานชาวSeed</a></li>
+                  <li><a class="dropdown-item" href="https://www.youtube.com/SEEDCHURCHTHAILAND">คำพยานชาวSeed</a></li>
                   <li><a class="dropdown-item" href="https://www.seedchurch-thailand.com/leadership">Leadership</a></li>
                 </ul>
               </li>
 
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle fw-bold fs-4 title-futuraHandwritten"
                   href="#"
@@ -90,7 +90,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                   <li><a class="dropdown-item" href={mainTrust}>หลักข้อเชื่อ</a></li>
                   <li><a class="dropdown-item" href={aboutUs}>เกี่ยวกับเรา</a></li>
                 </ul>
-              </li>
+              </li> -->
               <!---<li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li> -->
