--- a/src/styles/loopImages.css
+++ b/src/styles/loopImages.css
@@ -120,6 +120,20 @@
     overflow: hidden;
   }
   
+
+    .loop_css3 {
+    position: relative;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    width: 100vw;
+    height: auto;
+    background-color: #f2f2f2;
+    overflow: hidden;
+  }
+  
   .loop_css3 div {
     flex: 0 0 auto;
     padding: 24px 12px;
