"Added new navbar item for CAMP 2024 and removed camp2024.astro page"

--- a/src/pages/camp2024.astro
+++ b/src/pages/camp2024.astro
@@ -22,7 +22,7 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
     <div>SEED CAMP 2024</div>
   </div>
   <div class="custom-content container">
-    <img src="detail_camp2024.png" alt="detail_camp2024" > 
+    <img src="/detail_camp2024.png" alt="detail_camp2024" > 
   </div>
   <br />
   <Footer />
