--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -51,6 +51,9 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
               <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/qrcode">QrCode</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/camp2024">CAMP</a>
+              </li>
               <!-- <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href={ourChruch}>Our Chuch</a>
               </li> -->
@@ -74,7 +77,17 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                   <li><a class="dropdown-item" href="https://www.seedchurch-thailand.com/leadership">Leadership</a></li>
                 </ul>
               </li>
-
+                   <!-- <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle fw-bold fs-4 title-futuraHandwritten"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Vision
+                </a>
               <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle fw-bold fs-4 title-futuraHandwritten"
