--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,6 +37,6 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
   <CardWithTap title="What We do?" body={msg2} />
 
   <CardWithTap title="เราเป็นโบสถ์แบบไหน?" body={msg3} color="#f5bfd2" />
-  <LoopImages />P
+  <LoopImages />
   <Footer />
 </Layout>
