--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -18,7 +18,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
     </div>
   </div>
   <div class="col-md-8">
-    <div class="d-flex justify-content-center test" >
+    <div class="d-flex justify-content-center test">
       <nav class="navbar navbar-expand-lg navbar-light navbar-line-seedbkk">
         <div class="container-fluid">
           <img class="rounded" width={48} height={48} src="/SEED_CHURCH_LOGO_3.png" alt="" />
@@ -70,14 +70,14 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="https://www.youtube.com/@seedchurchthailand2297"
-                      >มานาจารย์ใหญ่และYoutube</a>
+                    <a class="dropdown-item" href="https://www.youtube.com/@seedchurch-thailand/playlists"
+                      >มานาจารย์ใหญ่และYoutube</a
+                    >
                   </li>
-                  <li><a class="dropdown-item" href="https://www.youtube.com/SEEDCHURCHTHAILAND">คำพยานชาวSeed</a></li>
                   <li><a class="dropdown-item" href="https://www.seedchurch-thailand.com/leadership">Leadership</a></li>
                 </ul>
               </li>
-                   <!-- <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle fw-bold fs-4 title-futuraHandwritten"
                   href="#"
@@ -115,9 +115,9 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
   </div>
   <div class="col-md-2">
     <div class="d-flex justify-content-center">
-      <div class="border-travel"> 
-       
-        เดินทางโดยรถไฟฟ้า BTS   <img src="./icons/railway.png"  width={48} height={48}/> ลงสถานีราชเทวี ออกประตูโรงแรมเอเชีย เดินมาทางขวา 130เมตร
+      <div class="border-travel">
+        เดินทางโดยรถไฟฟ้า BTS <img src="./icons/railway.png" width={48} height={48} /> ลงสถานีราชเทวี
+        ออกประตูโรงแรมเอเชีย เดินมาทางขวา 130เมตร
       </div>
     </div>
   </div>
