--- a/src/styles/saweria.css
+++ b/src/styles/saweria.css
@@ -8,7 +8,7 @@
 
 
 body {
-  font-family: 'Bai Jamjuree', monospace;
+  font-family: 'IBM Plex Sans Thai Looped', monospace;
   margin: 0;
   background: #FAF8F6;
   color: #333;
