--- a/src/components/BaseHeadSeedBKK.astro
+++ b/src/components/BaseHeadSeedBKK.astro
@@ -29,7 +29,7 @@ const { title, description, image = '/cardsEffect/card_cover_3_2.jpg' } = Astro.
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300;400&display=swap" rel="stylesheet" />
-<link href="https://fonts.googleapis.com/css2?family=Niramit&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Niramit&display=s  wap" rel="stylesheet" />
 <link
   href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
   rel="stylesheet"
@@ -37,6 +37,12 @@ const { title, description, image = '/cardsEffect/card_cover_3_2.jpg' } = Astro.
 
 <link
   href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+  rel="stylesheet"
+/>
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;200;300;400;500;600;700&display=swap"
   rel="stylesheet"
 />
 
