--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -36,9 +36,9 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
           </button>
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-lg-0 mb-2 me-auto">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/welcome">Welcome</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/care">Care</a>
               </li>
