--- a/src/components/saweria/Social.astro
+++ b/src/components/saweria/Social.astro
@@ -49,7 +49,7 @@
       ></path>
     </svg>
   </a>
-  <a href="" target="_blank">
+  <a href="https://www.instagram.com/seedch.bkk.777/" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="62" height="64" viewBox="0 0 100 100">
       <path
         fill="#4e5fd8"
@@ -118,7 +118,7 @@
     </svg>
   </a>
 
-  <a href="https://www.youtube.com/@seedchurchthailand2297" target="_blank">
+  <a href="https://www.youtube.com/@SeedChBKK" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64" height="64" viewBox="0 0 100 100">
       <path
         fill="#e85654"
