--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,16 +27,16 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
 
   <ContainerCards/>
   <br />
-  <Card body={msg} />
+  <!-- <Card body={msg} /> -->
   <br />
   <div class="custom-content container">
     <div class="col-md-12 col-sm-12 col-12">
       <img class="img-fluid rounded" src="./peep_characters.png" alt="" />
     </div>
   </div>
-  <CardWithTap title="What We do?" body={msg2} />
+  <!-- <CardWithTap title="What We do?" body={msg2} />
 
-  <CardWithTap title="เราเป็นโบสถ์แบบไหน?" body={msg3} color="#f5bfd2" />
+  <CardWithTap title="เราเป็นโบสถ์แบบไหน?" body={msg3} color="#f5bfd2" /> -->
   <LoopImages />
   <Footer />
 </Layout>
