"Removed props and layout attributes from various page components, simplified layout and removed unnecessary code"

--- a/src/pages/camp2024.astro
+++ b/src/pages/camp2024.astro
@@ -9,11 +9,7 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
 import LoopImages from '@/components/saweria/LoopImages.astro'
 ---
 
-<Layout
-  title="ＳＥＥＤＢＫＫ"
-  description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น"
-  pubDate={new Date('Septerber 09 2023')}
->
+<Layout>
   <Navbar />
   <Header />
   <div class="loop_css3">
@@ -22,7 +18,7 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
     <div>SEED CAMP 2024</div>
   </div>
   <div class="custom-content container">
-    <img src="/detail_camp2024.png" alt="detail_camp2024" > 
+    <img src="/detail_camp2024.png" alt="detail_camp2024" />
   </div>
   <br />
   <Footer />
