--- a/src/pages/care.astro
+++ b/src/pages/care.astro
@@ -22,11 +22,7 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
     font-size: 4vw; /* Font size scales with viewport width */
   }
 </style>
-<Layout
-  title="ＳＥＥＤＢＫＫ"
-  description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น"
-  pubDate={new Date('Septerber 09 2023')}
->
+<Layout>
   <Navbar />
 
   <div class="center-container">
