--- a/src/pages/culture.astro
+++ b/src/pages/culture.astro
@@ -4,26 +4,22 @@ import Navbar from '$components/saweria/Navbar.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
 ---
+
 <style>
-  
-    .section {
-        padding: 50px 20px;
-    }
-    .icon {
-        font-size: 40px;
-    }
-    .bg-light-blue {
-        background-color: #dce6f2; /* Light blue */
-    }
-    .bg-lighter {
-        background-color: #f7f9fc; /* Slightly lighter background */
-    }
+  .section {
+    padding: 50px 20px;
+  }
+  .icon {
+    font-size: 40px;
+  }
+  .bg-light-blue {
+    background-color: #dce6f2; /* Light blue */
+  }
+  .bg-lighter {
+    background-color: #f7f9fc; /* Slightly lighter background */
+  }
 </style>
-<Layout
-  title="คริสตจักรเมล็ดพันธุ์กรุงเทพ | SEEDBKK"
-  description="สถานที่ที่คุณสามารถพบกับเพื่อนใหม่ สร้างความสัมพันธ์ที่ยั่งยืน และค้นหาความหมายในชีวิต ร่วมกันกับเพื่อนๆวัยรุ่นที่มีความเชื่อและเป้าหมายเดียวกัน เรามีกิจกรรมสนุกสนาน การนมัสการที่สดใส และการสนับสนุนจากทีมงานที่มีประสบการณ์ มาร่วมเดินทางในเส้นทางแห่งความเชื่อและความรักกับเราในโบสวัยรุ่น"
-  pubDate={new Date('July 09 2024')}
->
+<Layout>
   <Navbar />
   <Header />
   <div class="container-fluid">
@@ -51,8 +47,6 @@ import Footer from '$components/Footer.astro'
       </div>
     </div>
 
-
-
-
-  <Footer />
+    <Footer />
+  </div>
 </Layout>
