--- a/src/pages/invite.astro
+++ b/src/pages/invite.astro
@@ -6,24 +6,15 @@ import CardWithTap from '$components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
 import ContainerCards from '@/components/saweria/ContainerCards.astro'
-
-
-
 ---
 
-<Layout
-  title="ＳＥＥＤＢＫＫ"
-  description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น"
-  pubDate={new Date('Septerber 09 2023')}
->
+<Layout>
   <!-- <Navbar /> -->
-<div class="custom-content container">
-
-  <!-- <Header /> -->
-  <img src="/profile/bussiness_card__seed_bkk_demo_v1_(1)-transformed.png" >
-  <!-- <ContainerCards/> -->
-  
-</div>
+  <div class="custom-content container">
+    <!-- <Header /> -->
+    <img src="/profile/bussiness_card__seed_bkk_demo_v1_(1)-transformed.png" />
+    <!-- <ContainerCards/> -->
+  </div>
 
   <!-- <Footer /> -->
 </Layout>
