--- a/src/layouts/SeedBKK.astro
+++ b/src/layouts/SeedBKK.astro
@@ -1,19 +1,13 @@
 ---
-import type { CollectionEntry } from 'astro:content'
 import BaseHead from '$components/BaseHeadSeedBKK.astro'
-import Header from '$components/Header.astro'
-import Footer from '$components/Footer.astro'
-import FormattedDate from '$components/FormattedDate.astro'
 
-type Props = CollectionEntry<'blog'>['data']
-
-const { title, description, pubDate, updatedDate } = Astro.props
+const title = 'ＳＥＥＤＢＫＫ'
+const description = 'โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น'
 ---
 
 <html lang="en">
   <head>
     <BaseHead title={title} description={description} />
-  
   </head>
 
   <body>
