--- a/src/pages/account.astro
+++ b/src/pages/account.astro
@@ -6,10 +6,8 @@ import CardWithTap from '$components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
 import ContainerCards from '@/components/saweria/ContainerCards.astro'
-
-
-
 ---
+
 <style>
   .center-container {
     display: flex;
@@ -24,22 +22,17 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
   }
 </style>
 
-
-<Layout
-  title="ＳＥＥＤＢＫＫ"
-  description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น"
-  pubDate={new Date('Septerber 09 2023')}
->
+<Layout>
   <Navbar />
   <!-- <Header /> -->
   <div class="center-container">
     <h1 class="large">บัญชีธนาคาร คริสตจักร</h1>
     <h1 class="large">ธนาคารไทยพานิชย์ สาขาสยามพารากอน</h1>
     <h1 class="large">
-      <img src="/icons/SCB.BK_BIG-b5007084.png" width="400" height="128">
-      218-289481-4
+      <img src="/icons/SCB.BK_BIG-b5007084.png" width="400" height="128" />
+       218-289481-4
     </h1>
-    <h3>ชื่อบัญชี น.ส เอกมณีและนันทิพัฒน์และนางวัธนี </h3>
+    <h3>ชื่อบัญชี น.ส เอกมณีและนันทิพัฒน์และนางวัธนี</h3>
   </div>
   <!-- <div class="custom-content container">
     
@@ -56,8 +49,6 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
   </div>
   <br/> -->
   <!-- <ContainerCards/> -->
-  
-  
 
   <Footer />
 </Layout>
