--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,25 +7,13 @@ import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
 import ContainerCards from '@/components/saweria/ContainerCards.astro'
 import LoopImages from '@/components/saweria/LoopImages.astro'
-
-const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้ข้อมูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น
-`
-
-const msg2 = `เราฟังเทศและ worship  เรารับประทานอารหารด้วยกัน เราใช้เวลากับพระเจ้าและสร้างความสัมพันธ์ที่ดีกับพี่น้องในโบส หลังเลิกโบสเราจะเล่น Board Game กัน`
-const msg3 = `เราเป็นโบสเล็กๆที่เพิ่งตั้งในองค์กรคริสตจักรเมล็ดพันธุ์ที่สังกัดสหกิจคริสเตียน  มีสมาชิกที่เป็นกลุ่มนักศึกษาและกลุ่มคนวัยทำงาน เราเน้นความเป็นสมัยใหม่เพื่อรองรับกลุ่มคนรุ่นใหม่`
-
-
 ---
 
-<Layout
-  title="คริสตจักรเมล็ดพันธุ์กรุงเทพ | SEEDBKK"
-  description="สถานที่ที่คุณสามารถพบกับเพื่อนใหม่ สร้างความสัมพันธ์ที่ยั่งยืน และค้นหาความหมายในชีวิต ร่วมกันกับเพื่อนๆวัยรุ่นที่มีความเชื่อและเป้าหมายเดียวกัน เรามีกิจกรรมสนุกสนาน การนมัสการที่สดใส และการสนับสนุนจากทีมงานที่มีประสบการณ์ มาร่วมเดินทางในเส้นทางแห่งความเชื่อและความรักกับเราในโบสวัยรุ่น"
-  pubDate={new Date('July 09 2024')}
->
+<Layout>
   <Navbar />
   <Header />
 
-  <ContainerCards/>
+  <ContainerCards />
   <br />
   <!-- <Card body={msg} /> -->
   <br />
