--- a/src/pages/qrcode.astro
+++ b/src/pages/qrcode.astro
@@ -6,22 +6,12 @@ import CardWithTap from '$components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
 import ContainerCards from '@/components/saweria/ContainerCards.astro'
-import ImageMove from '@/components/saweria/imageMove.astro'
 
-const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้ข้อมูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น
-`
-
-const msg2 = `เราฟังเทศและ worship  เรารับประทานอารหารด้วยกัน เราใช้เวลากับพระเจ้าและสร้างความสัมพันธ์ที่ดีกับพี่น้องในโบส หลังเลิกโบสเราจะเล่น Board Game กัน`
-const msg3 = `เราเป็นโบสเล็กๆที่เพิ่งตั้งในองค์กรคริสตจักรเมล็ดพันธุ์ที่สังกัดสหกิจคริสเตียน  มีสมาชิกที่เป็นกลุ่มนักศึกษาและกลุ่มคนวัยทำงาน เราเน้นความเป็นสมัยใหม่เพื่อรองรับกลุ่มคนรุ่นใหม่`
+const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้ข้อมูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น`
 ---
 
-<Layout
-  title="ＳＥＥＤＢＫＫ"
-  description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น"
-  pubDate={new Date('Septerber 09 2023')}
->
+<Layout>
   <Navbar />
-  <!-- <ImageMove /> -->
   <Header />
 
   <div class="custom-content container">
