"Commented out and rearranged elements in Header, Navbar, and index pages"

--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -23,14 +23,14 @@ const isHasGod =
     <!-- <img class="img-fluid rounded" width={600} height={272} src="./seed-anime.gif" alt="" /> -->
      <!-- <img class="" width={600} height={272} src="./bg.jfif" alt="" /> -->
   </div>
-  <div class="custom-nav">
+  <!-- <div class="custom-nav">
     <a class="btn btn-enter" href={isHasGod}>
       พระเจ้ามีจริงไหม? <img height={32} width={32} src="/icons/JESUS.png" alt="" />
     </a>
     <a class="btn btn-list" href="https://line.me/R/ti/p/@501gghbd">
       Join SeedBKK <img height={32} width={32} src="/icons/LINE_Brand_icon.png" alt="" /></a
     >
-  </div>
+  </div> -->
 </div>
 
 <script>
