--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -13,7 +13,7 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
   <Navbar />
   <Header />
 
-  <!-- <ContainerCards /> -->
+  <ContainerCards />
   <br />
   <!-- <Card body={msg} /> -->
   <br />
@@ -25,6 +25,6 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
   <!-- <CardWithTap title="What We do?" body={msg2} />
 
   <CardWithTap title="เราเป็นโบสถ์แบบไหน?" body={msg3} color="#f5bfd2" /> -->
-  <!-- <LoopImages /> -->
-  <!-- <Footer /> -->
+  <LoopImages />
+  <Footer />
 </Layout>
