--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -49,8 +49,11 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/invite">Invite</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/qrcode">QrCode</a>
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/gallery">Gallery</a>
               </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/qrcode">QrCode</a>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/camp2024">CAMP</a>
               </li>
