Added an img tag with a MeteMaskAddress icon in the account page, and uncommented it.

--- a/src/pages/account.astro
+++ b/src/pages/account.astro
@@ -26,6 +26,7 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
   <Navbar />
   <!-- <Header /> -->
   <div class="center-container">
+    <!-- <img src="/icons/meteMaskAddress.png" width="400" height="400" /> -->
     <h1 class="large">บัญชีธนาคาร คริสตจักร</h1>
     <h1 class="large">ธนาคารไทยพานิชย์ สาขาสยามพารากอน</h1>
     <h1 class="large">
@@ -33,6 +34,7 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
        218-289481-4
     </h1>
     <h3>ชื่อบัญชี น.ส เอกมณีและนันทิพัฒน์และนางวัธนี</h3>
+    <img src="/icons/meteMaskAddress.png"  />
   </div>
   <!-- <div class="custom-content container">
     
