--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -119,9 +119,10 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
   <div class="col-md-2">
     <div class="d-flex justify-content-center">
       <div class="border-travel">
-        เดินทางโดยรถไฟฟ้า BTS <img src="./icons/railway.png" width={48} height={48} /> ลงสถานีราชเทวี
+        เดินทางโดยรถไฟฟ้า BTS <img src="/icons/railway.png" width={48} height={48} /> ลงสถานีราชเทวี
         ออกประตูโรงแรมเอเชีย เดินมาทางขวา 130เมตร
-      </div>
+      </div>  
     </div>
   </div>
 </div>
+
