`Update font size in account page styles and add new heading`

--- a/src/pages/account.astro
+++ b/src/pages/account.astro
@@ -18,7 +18,7 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
     text-align: center; /* Center text horizontally */
   }
   .large {
-    font-size: 5vw; /* Font size scales with viewport width */
+    font-size: 4vw; /* Font size scales with viewport width */
   }
 </style>
 
@@ -34,6 +34,7 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
        218-289481-4
     </h1>
     <h3>ชื่อบัญชี น.ส เอกมณีและนันทิพัฒน์และนางวัธนี</h3>
+    <h1 class="large">Cryptocurrency Wallet (USDT,BTC,ETH)</h1>
     <img src="/icons/meteMaskAddress.png"  />
   </div>
   <!-- <div class="custom-content container">
