--- a/src/pages/care.astro
+++ b/src/pages/care.astro
@@ -74,60 +74,30 @@ import ImageGallery from '@/components/ImageGallery'
   </section>
 
   <h1 class="large text-center">ม.เกษตร - อาคารเรียนรวม 3 วันพฤหัส 18.00-20.00</h1>
-  <div class="container py-4">
+  <div class="container-fluid">
     <div class="row g-3">
       <div class="col-12 col-md-4">
-        <img
-          src="https://placehold.co/300x300"
-          alt="LEGO bricks"
-          class="img-fluid w-100 h-100 object-fit-cover rounded"
-          style={{ minHeight: '300px' }}
-        />
+        <img src="/care/ku1.JPG" alt="care ku1" class="img-fluid w-100 h-200 object-fit-cover rounded" />
       </div>
       <div class="col-12 col-md-4">
-        <img
-          src="https://placehold.co/300x300"
-          alt="Digital interface presentation"
-          class="img-fluid w-100 h-100 object-fit-cover rounded"
-          style={{ minHeight: '300px' }}
-        />
+        <img src="/care/ku2.png" alt="care ku2" class="img-fluid w-100 h-200 object-fit-cover rounded" />
       </div>
       <div class="col-12 col-md-4">
-        <img
-          src="https://placehold.co/300x300"
-          alt="Digital interface presentation"
-          class="img-fluid w-100 h-100 object-fit-cover rounded"
-          style={{ minHeight: '300px' }}
-        />
+        <img src="/care/ku3.JPG" alt="care ku3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
       </div>
     </div>
     <h1 class="large text-center">ม.รังสิต - โรงอาหาร ตึก 6 วันศุกร์ 19.00-21.00</h1>
 
-    <div class="container py-4">
+    <div class="container-fluid">
       <div class="row g-3">
         <div class="col-12 col-md-4">
-          <img
-            src="https://placehold.co/300x300"
-            alt="LEGO bricks"
-            class="img-fluid w-100 h-100 object-fit-cover rounded"
-            style={{ minHeight: '300px' }}
-          />
+          <img src="/care/ru1.JPG" alt="care ru1" class="img-fluid w-100 h-200 object-fit-cover rounded" />
         </div>
         <div class="col-12 col-md-4">
-          <img
-            src="https://placehold.co/300x300"
-            alt="Digital interface presentation"
-            class="img-fluid w-100 h-100 object-fit-cover rounded"
-            style={{ minHeight: '300px' }}
-          />
+          <img src="/care/ru2.JPG" alt="care ru2" class="img-fluid w-100 h-200 object-fit-cover rounded" />
         </div>
         <div class="col-12 col-md-4">
-          <img
-            src="https://placehold.co/300x300"
-            alt="Digital interface presentation"
-            class="img-fluid w-100 h-100 object-fit-cover rounded"
-            style={{ minHeight: '300px' }}
-          />
+          <img src="/care/ru3.JPG" alt="care ru3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
         </div>
       </div>
     </div>
