--- a/src/pages/account.astro
+++ b/src/pages/account.astro
@@ -28,12 +28,14 @@ import ContainerCards from '@/components/saweria/ContainerCards.astro'
   <div class="center-container">
     <!-- <img src="/icons/meteMaskAddress.png" width="400" height="400" /> -->
     <h1 class="large">บัญชีธนาคาร คริสตจักร</h1>
-    <h1 class="large">ธนาคารไทยพานิชย์ สาขาเซ็นเตอร์ วันช้อปปิ้ง พลาซ่า</h1>
+    <h1 class="large">ธนาคารไทยพานิชย์ </h1>
+    <h1 class="large">สาขาเซ็นเตอร์วันช้อปปิ้งพลาซ่า</h1>  
+    
     <h1 class="large">
       <img src="/icons/SCB.BK_BIG-b5007084.png" width="400" height="128" />
        420-1960363-1
     </h1>
-    <h3>ชื่อบัญชีเอกมณีและนันทิพัฒน์และวัธนีและพิชาม</h3>
+    <h3>ชื่อบัญชีเอกมณีและวัธนีและพิชาม</h3>
     <img src="/icons/meteMaskAddress.png"  />
   </div>
   <!-- <div class="custom-content container">
