--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -54,9 +54,9 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
               <!-- <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/qrcode">QrCode</a>
               </li> -->
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/camp2024">CAMP</a>
-              </li>
+              </li> -->
               <!-- <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href={ourChruch}>Our Chuch</a>
               </li> -->
