fix: update account and care page details
- Corrected account number on account page.
- Updated care page schedule to Tuesday.

--- a/src/pages/care.astro
+++ b/src/pages/care.astro
@@ -86,7 +86,7 @@ import ImageGallery from '@/components/ImageGallery'
         <img src="/care/ku3.JPG" alt="care ku3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
       </div>
     </div>
-    <h1 class="large text-center">ม.รังสิต - โรงอาหาร ตึก 6 วันศุกร์ 19.00-21.00</h1>
+    <h1 class="large text-center">ม.รังสิต - โรงอาหาร ตึก 6 วันอังคาร 19.00-21.00</h1>
 
     <div class="container-fluid">
       <div class="row g-3">
