`Update care page with new images and layout changes`

--- a/src/pages/care.astro
+++ b/src/pages/care.astro
@@ -26,9 +26,24 @@ import ImageGallery from '@/components/ImageGallery'
 <Layout>
   <Navbar />
   <!-- <ImageGallery client:only="react" /> -->
-  <h1 class="large text-center">ราชเทวี - creative space วันพุธ 19.00-21.00</h1>
-
-  <section class="container-cards">
+  <h1 class="large text-center">ราชเทวีCreative Space@CCT วันพุธ 19.00-21.00</h1>
+  <div class="container-fluid">
+    <div class="row g-3">
+      <div class="col-12 col-md-4">
+        <img src="/care/cct1.jpg" alt="care ru1" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+      </div>
+      <div class="col-12 col-md-4">
+        <img src="/care/cct2.jpg" alt="care ru2" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+      </div>
+      <div class="col-12 col-md-4">
+        <img src="/care/cct3.jpg" alt="care ru2" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+      </div>
+      <!-- <div class="col-12 col-md-4">
+        <img src="/care/ru3.jpg" alt="care ru3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+      </div> -->
+    </div>
+  </div>
+  <!-- <section class="container-cards">
     <div class="category_container">
       <div class="content">
         <img src="/cardsEffect2/place1.jpg" class="professio_image" alt="Profession" />
@@ -71,9 +86,9 @@ import ImageGallery from '@/components/ImageGallery'
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <h1 class="large text-center">ม.เกษตร - อาคารเรียนรวม 3 วันพฤหัส 18.00-20.00</h1>
+  <h1 class="large text-center">อาคารเรียนรวม3 @KU วันพฤหัส 18.00-20.00</h1>
   <div class="container-fluid">
     <div class="row g-3">
       <div class="col-12 col-md-4">
@@ -86,7 +101,7 @@ import ImageGallery from '@/components/ImageGallery'
         <img src="/care/ku3.JPG" alt="care ku3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
       </div>
     </div>
-    <h1 class="large text-center">ม.รังสิต - โรงอาหาร ตึก 6 วันอังคาร 19.00-21.00</h1>
+    <h1 class="large text-center">โรงอาหารตึก 6 @RSU วันอังคาร 19.00-21.00</h1>
 
     <div class="container-fluid">
       <div class="row g-3">
@@ -97,8 +112,23 @@ import ImageGallery from '@/components/ImageGallery'
           <img src="/care/ru2.JPG" alt="care ru2" class="img-fluid w-100 h-200 object-fit-cover rounded" />
         </div>
         <div class="col-12 col-md-4">
-          <img src="/care/ru3.JPG" alt="care ru3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+          <img src="/care/ru3.jpg" alt="care ru3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
         </div>
+      </div>
+    </div>
+    <h1 class="large text-center"> อาคาร5 ข้าง Cafe Amazon@SPU  วันจันทร์ 15.00-17.00</h1>
+
+    <div class="container-fluid">
+      <div class="row g-3">
+        <div class="col-12 col-md-4">
+          <img src="/care/spu1.jpg" alt="care ru1" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+        </div>
+        <div class="col-12 col-md-4">
+          <img src="/care/spu2.jpg" alt="care ru2" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+        </div>
+        <!-- <div class="col-12 col-md-4">
+          <img src="/care/ru3.jpg" alt="care ru3" class="img-fluid w-100 h-200 object-fit-cover rounded" />
+        </div> -->
       </div>
     </div>
 
